--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
+before_install: gem install puppet-lint>=1.0.1
 script:
-  - ./inception.sh
+# quite old puppet available in travis machines... It's a pitty...
+#  - ./inception.sh
   - puppet-lint manifests
   - puppet-lint profiles
