--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 before_install:
   - gem install puppet-lint>=1.0.1
-  - sudo apt-get install shellcheck
+#  - sudo apt-get install shellcheck
 script:
 # quite old puppet available in travis machines... It's a pitty...
 #  - ./inception.sh
